# gatecheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: AUDIT_SUMMARY.md  CALIBRATION_CERTIFICATES.md  CERTIFICATE.md
src/gatecheck/: __init__.py  calibration.py  cv.py  deflation.py  incremental.py  oos.py  rank.py  significance.py
tests/: test_calibration.py  test_cv.py  test_deflation.py  test_incremental.py  test_oos.py  test_package.py  test_rank.py  test_significance.py
verdicts/2026-07/: README.md  claims.json  not_benchable.json
