[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gatecheck"
version = "0.1.0"
description = "Calibrated statistical gates for research adjudication: every test ships with planted-truth / planted-null certification (tests for the tests)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gatecheck" }]
keywords = [
    "statistics",
    "backtesting",
    "deflated-sharpe",
    "cross-validation",
    "calibration",
    "falsification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
# GitHub org slug is `gatecheck-io` (the `gatecheck` org handle was taken); the
# public brand + the PyPI name are still `gatecheck`.
Homepage = "https://github.com/gatecheck-io/gatecheck"
Source = "https://github.com/gatecheck-io/gatecheck"
Newsletter = "https://gatecheck.substack.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
